--- a/shop_new/dev/index.html
+++ b/shop_new/dev/index.html
@@ -11,8 +11,7 @@
 <body>
 	<div class="container">
 		<h1>Products of the Future</h1>
-		
-		<input type="search" placeholder="Search products" ng-model="productName" />
+		<input class="well" type="search" placeholder="Search products" ng-model="productName" />
 
 		<div ng-view>
 
