--- a/webshop/dev/cart/cart.html
+++ b/webshop/dev/cart/cart.html
@@ -9,7 +9,7 @@
             <th>Price</th>
             <th>Quantity</th>
             <th>Price per Product</th>
-            <th>Option</th>
+            <th>Remove from Cart</th>
 
         </tr>
         </thead>
@@ -42,7 +42,9 @@
         </tfoot>
     </table>
     
-    <a ng-href="#/index"><button class=' btn btn-success' value="Home">Continue Shopping</button></a>
+    <a ng-href="#/index"><button class="btn btn-success" value="Home"><<< Continue Shopping</button></a>
+
+    <a ng-href="#/checkout"><button class="btn btn-warning" value="Checkout">Checkout >>></button></a>
 
 	</div>
 
