--- a/webshop/dev/products/product.html
+++ b/webshop/dev/products/product.html
@@ -1,3 +1,7 @@
+<div class = "well">
 <h3>{{ product.name }}</h3>
-<p> {{ product.price }} DKK</p>
+<p> Price per item: <strong>{{ product.price }} DKK </strong></p>
 <img src= "{{ product.image }}">
+</div>
+
+<a ng-href="#/index"><button class=' btn btn-success' value="Home"> <<< Continue Shopping</button></a>
